Fixes Markdown formatting for several articles

--- a/_posts/2017-08-07-opendiff.md
+++ b/_posts/2017-08-07-opendiff.md
@@ -11,15 +11,17 @@ tags:
 - xcode
 ---
 
-Recently a developer colleague of mine was asking about diff tools. We let him know that he can use
-[Homebrew](https://brew.sh/) to install a ported version of the 'diff' tool provided by
+Recently a developer colleague of mine was asking about diff tools. We let him
+know that he can use [Homebrew](https://brew.sh/) to install a ported version
+of the 'diff' tool provided by
 [GNU utils](http://www.gnu.org/software/coreutils/coreutils.html).
 
-An expensive alternative is [Kaleidoscope app](https://www.kaleidoscopeapp.com/), which looks great but might be
+An expensive alternative is [Kaleidoscope app], which looks great but might be
 overkill for our purposes.
 
-The good news is that XCode provides a GUI tool called FileMerge, which is also known as `opendiff` from the command
-line. You do have to agree to the Xcode/iOS license, which requires local admin privileges, to use this tool.
+The good news is that XCode provides a GUI tool called FileMerge, which is also
+known as `opendiff` from the command line. You do have to agree to the Xcode/iOS
+license, which requires local admin privileges, to use this tool.
 
 ``` shell
 $ which opendiff
@@ -28,15 +30,19 @@ $ which opendiff
 
 ![FileMerge Screenshot](images/posts/filemerge-screenshot.png "FileMerge Screenshot")
 
-It appears to provide a very intuitive GUI representation of the differences. You can also configure it to be the
-default merge tool with Git.
+It appears to provide a very intuitive GUI representation of the differences.
+You can also configure it to be the default merge tool with Git.
 
 ``` shell
 git config --global merge.tool opendiff
 ```
 
-If you want to launch FileMerge from the Launcher, you'll need to open the Applications folder, right-click on XCode,
-choose to 'Show Package Contents', then navigate to Contents/Applications. Inside you'll see the FileMerge application.
+If you want to launch FileMerge from the Launcher, you'll need to open the
+Applications folder, right-click on XCode, choose to 'Show Package Contents',
+then navigate to Contents/Applications. Inside you'll see the FileMerge
+application.
 
-If you right-click on FileMerge, you can right-click, choose to 'Make Alias', then move the alias to your Applications
-folder.
+If you right-click on FileMerge, you can right-click, choose to 'Make Alias',
+then move the alias to your Applications folder.
+
+[Kaleidoscope app]: https://www.kaleidoscopeapp.com/
