--- a/_posts/2019-04-10-ansible.md
+++ b/_posts/2019-04-10-ansible.md
@@ -16,7 +16,7 @@ tags:
   - git
 ---
 
-# Introduction
+## Introduction
 
 This guide will help you get started on using [Ansible], an open-source tool
 you can use to automate and maintain the software and configurations of your
@@ -53,19 +53,20 @@ configurations are stored in a Git repository.
 [Amazon Cloud9]: https://aws.amazon.com/cloud9/
 [git]: https://en.wikipedia.org/wiki/Git
 
-# Establishing a Git repository
+## Establishing a Git repository
 
 Create a [new Github repository] to store your Ansible configuration. After
 you've done this, use `git` to clone the repository into your local environment.
 
 Here's the command I used with my own repository:
+
 ```bash
 git clone git@github.com:redconfetti/cloud9-dev.git
 ```
 
 [new Github repository]: https://github.com/new
 
-# Installing the Ansible Engine
+## Installing the Ansible Engine
 
 Amazon Linux includes Python 2.7 and 3.5 by default. Installing Ansible using
 the Yum package manager leads to conflicts, so use the Python 2.7 version of
@@ -81,7 +82,7 @@ If you're using a different Linux distribution, see the
 
 [Ansible Installation Guide]: https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html
 
-# Ansible Configuration
+## Ansible Configuration
 
 The default Ansible configuration file is located under
 `/etc/ansible/ansible.cfg`. Ansible will over-ride these default settings if
@@ -119,7 +120,7 @@ Ansible Configuration Documentation:
 [Ansible Configuration Settings]: https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-configuration-settings-locations
 [ansible-config]: https://docs.ansible.com/ansible/latest/cli/ansible-config.html
 
-# Ansible Inventory
+## Ansible Inventory
 
 Ansible is able to manage the state of multiple machines. By default, the
 inventory is defined in `/etc/ansible/hosts` using a format similar to an
@@ -130,6 +131,7 @@ located in the root directory of the repository.
 
 Create the `hosts.yml` file with the following contents that defines the local
 machine as 'local'.
+
 ```yml
 all:
   hosts:
@@ -147,7 +149,7 @@ For more information, see [Ansible - Working with Inventory]
 [Ansible - Working with Inventory]: https://docs.ansible.com/ansible/latest/user_guide/intro_inventory.html
 [INI file]: https://en.wikipedia.org/wiki/INI_file
 
-# Ansible Ad-Hoc Commands
+## Ansible Ad-Hoc Commands
 
 Ansible is designed to connect to hosts configured in your inventory file using
 SSH key authentication. Because we're configured to connect to our local
@@ -157,10 +159,11 @@ Ansible can be used to perform checks against hosts using a single command
 line command, known as an 'ad-hoc' command.
 
 Run the command `ansible all -m ping` and you should see the following.
+
 ```bash
 $ ansible all -m ping
 local | SUCCESS => {
-    "changed": false, 
+    "changed": false,
     "ping": "pong"
 }
 ```
@@ -172,7 +175,7 @@ For more information, see [Introduction To Ad-Hoc Commands].
 
 [Introduction To Ad-Hoc Commands]: https://docs.ansible.com/ansible/latest/user_guide/intro_adhoc.html
 
-# Ansible Playbooks
+## Ansible Playbooks
 
 Ad-hoc commands are useful, but playbooks are where we can define multiple
 tasks that maintain the state of your system(s).
@@ -183,7 +186,7 @@ information. In this case the information is our configuration that Ansible
 modules are defined to interpret and apply to the hosts we specify.
 
 A playbook can contain one or more "plays" that applies a certain state to a
-group of hosts. 
+group of hosts.
 
 The Amazon Linux distribution uses a package manager called Yum (Yellowdog
 Updater Modified). Ansible provides a [Yum module] which allows us to use this
@@ -205,11 +208,13 @@ directory.
 ```
 
 Next, run the following command to run this playbook.
+
 ```bash
 ansible-playbook local.yml
 ```
 
 You should see output similar to this:
+
 ```bash
 PLAY [local] *******************************************************************
 
@@ -220,7 +225,7 @@ TASK [upgrade all packages] ****************************************************
 ok: [local]
 
 PLAY RECAP *********************************************************************
-localhost                  : ok=2    changed=0    unreachable=0    failed=0   
+localhost                  : ok=2    changed=0    unreachable=0    failed=0
 ```
 
 Now all of the software packages installed within your EC2 instance running
@@ -232,7 +237,7 @@ See [Intro to Playbooks] or [Modules by Category].
 [Intro to Playbooks]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html
 [Modules by Category]: https://docs.ansible.com/ansible/latest/modules/modules_by_category.html
 
-# Ansible Modules
+## Ansible Modules
 
 We just covered a task that used the Yum module to update all the installed
 software packages on the server.
@@ -255,14 +260,16 @@ ansible-doc hostname
 
 You can also browse modules online starting with [Modules by Category].
 
-# Ansible Templates
+## Ansible Templates
 
 Most Unix/Linux utilities and daemons can be configured using plain text files.
 Ansible supports the ability to define configuration file templates that use the
 Jinja2 template syntax.
 
-Let's create a file called `gitconfig.j2` to define our Git client configuration.
-```
+Let's create a file called `gitconfig.j2` to define our Git client
+configuration.
+
+```django
 # {{ ansible_managed }}
 [core]
   editor = /usr/bin/nano
@@ -322,7 +329,7 @@ TASK [configure git client] ****************************************************
 changed: [local]
 
 PLAY RECAP *********************************************************************
-localhost                  : ok=4    changed=1    unreachable=0    failed=0   
+localhost                  : ok=4    changed=1    unreachable=0    failed=0
 ```
 
 Now check the state of the Git configuration file.
@@ -347,7 +354,8 @@ time, although this will result in Ansible reporting that the coniguration
 file has been changed everytime you run the task.
 
 __ansible.cfg__
-```
+
+```django
 [defaults]
 inventory = hosts.yml
 ansible_managed = Ansible managed, do not edit directly: last update by {uid} on %Y-%m-%d, %H:%M:%S
@@ -394,7 +402,7 @@ $ cat ~/.gitconfig
 
 [ansible_managed]: https://docs.ansible.com/ansible/2.4/intro_configuration.html#ansible-managed
 
-# Ansible Roles
+## Ansible Roles
 
 If you placed all your tasks in a playbook, it could get very large and wouldn't
 be as easy to manage. This is why Ansible supports grouping your automation
@@ -413,14 +421,17 @@ Taken from [Ansible Docs - Roles]
 > least one of these directories, however it is perfectly fine to exclude any
 > which are not being used. When in use, each directory must contain a
 > `main.yml` file, which contains the relevant content:
-> 
-> * `tasks` - contains the main list of tasks to be executed by the role.
-> * `handlers` - contains handlers, which may be used by this role or even anywhere outside this role.
-> * `files` - contains files which can be deployed via this role.
-> * `templates` - contains templates which can be deployed via this role.
-> * `vars` - other variables for the role (see [Ansible Docs - Using Variables] for more information).
-> * `defaults` - default variables for the role (see [Ansible Docs - Using Variables] for more information).
-> * `meta` - defines some meta data for this role. See below for more details.
+>
+> - `tasks` - contains the main list of tasks to be executed by the role.
+> - `handlers` - contains handlers, which may be used by this role or even
+>    anywhere outside this role.
+> - `files` - contains files which can be deployed via this role.
+> - `templates` - contains templates which can be deployed via this role.
+> - `vars` - other variables for the role (see [Ansible Docs - Using Variables]
+>    for more information).
+> - `defaults` - default variables for the role (see
+>    [Ansible Docs - Using Variables] for more information).
+> - `meta` - defines some meta data for this role. See below for more details.
 
 Let's move our tasks to a new role called 'development'.
 
@@ -499,6 +510,7 @@ host.
 Here we've defined a 'development' group, and have placed our 'local' host
 underneath that group. We've also defined the variables that should apply to
 all hosts within that 'development' group.
+
 ```yml
 all:
   children:
@@ -522,25 +534,25 @@ $ ansible-inventory --list
     "_meta": {
         "hostvars": {
             "local": {
-                "ansible_connection": "local", 
-                "ansible_host": "localhost", 
-                "git_client_email": "peewee@example.com", 
-                "git_client_name": "PeeWee Herman", 
-                "repository": "https://github.com/redconfetti/redconfetti.github.io", 
+                "ansible_connection": "local",
+                "ansible_host": "localhost",
+                "git_client_email": "peewee@example.com",
+                "git_client_name": "PeeWee Herman",
+                "repository": "https://github.com/redconfetti/redconfetti.github.io",
             }
         }
-    }, 
+    },
     "all": {
         "children": [
-            "development", 
+            "development",
             "ungrouped"
         ]
-    }, 
+    },
     "development": {
         "hosts": [
             "local"
         ]
-    }, 
+    },
     "ungrouped": {}
 }
 
@@ -557,6 +569,7 @@ the files within it after each host. You can also create a `group_vars`
 directory, and then name the files within it after each group.
 
 Let's create a host variable file for our 'local' host.
+
 ```bash
 mkdir host_vars
 touch host_vars/local.yml
@@ -566,6 +579,7 @@ Next let's move our variables from the `hosts.yml` into our
 `host_vars/local.yml` file.
 
 _host_vars/local.yml_
+
 ```yml
 git_client_name: PeeWee Herman
 git_client_email: peewee@example.com
@@ -574,6 +588,7 @@ git_client_email: peewee@example.com
 This should result in our hosts file being slim again.
 
 _hosts.yml_
+
 ```yml
 all:
   children:
@@ -610,6 +625,7 @@ touch roles/development/defaults/main.yml
 ```
 
 After you've done this, add the following to `defaults/main.yml`.
+
 ```yml
 git_client_name: "{{ ansible_user_gecos }}"
 git_client_email: "{{ ansible_user_id }}@{{ ansible_fqdn }}"
@@ -618,12 +634,13 @@ git_client_email: "{{ ansible_user_id }}@{{ ansible_fqdn }}"
 To properly test this, go into `host_vars/local.yml` and comment out the
 `git_client_name` and `git_client_email` variables.
 
-```
+```yml
 # git_client_name: PeeWee Herman
 # git_client_email: peewee@example.com
 ```
 
 Run the playbook once more and see what happens.
+
 ```bash
 $ ansible-playbook local.yml
 
@@ -649,6 +666,7 @@ You more than likely have some passwords and API keys that you surely don't
 want to check into your repository (even if it's private).
 
 To work around this, you can configure your playbook like the following.
+
 ```yml
 ---
 # This playbook deploys the entire setup to the Cloud9 development environment.
@@ -663,6 +681,7 @@ To work around this, you can configure your playbook like the following.
 ```
 
 Next create a `~/.ansible_secrets.yml` file with the following contents:
+
 ```yml
 ---
 secret_password: abcdef123456
@@ -670,8 +689,9 @@ some_api_key: A65B90148F091E5F3F7E4DFFECD1B074
 ```
 
 When you run your playbook, it should reflect the secrets you configured.
+
 ```bash
-$ ansible-playbook local.yml 
+$ ansible-playbook local.yml
 
 PLAY [local] *******************************************************************
 
@@ -700,14 +720,14 @@ in the future.
 
 A good practice is to add instructions to your `README.md` file, like so:
 
-> # Setup 
+> \# Setup
 >
 > Run the following command to copy the template to your home directory
 >
-> ```shell
+> \`\`\`shell
 > cp ansible_secrets.example.yml ~/.ansible_secrets.yml
-> ```
-> 
+> \`\`\`
+>
 > Next, modify `~/.ansible_secrets.yml` to reflect the proper API keys
 > and passwords.
 
@@ -716,7 +736,7 @@ For more information, see [Ansible Docs - Defining Variables In Files].
 [Ansible Docs - Defining Variables In Files]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#defining-variables-in-files
 [Ansible Docs - Using Variables]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html
 
-# Ansible Vault
+## Ansible Vault
 
 Instead of defining your variables in a file that you keep separate of your
 repository, there is an option to store your secrets in an encrypted file
@@ -729,7 +749,7 @@ You can run your playbook with a flag to let `ansible-playbook` know that it
 needs to decrypt one of the variable files.
 
 ```bash
-$ ansible-playbook --ask-vault-pass local.yml
+ansible-playbook --ask-vault-pass local.yml
 ```
 
 You can also place your Ansible Vault password in a file and tell Ansible to
@@ -752,7 +772,7 @@ Or if you want to make this a setting associated with your repository, you can
 simply add a '[defaults]' section to your `ansible.cfg` that defines the path
 to the vault password file.
 
-```
+```django
 [defaults]
 . . .
 vault_password_file = ~/.vault_pass
@@ -765,7 +785,7 @@ give the password to.
 
 [Ansible Vault]: https://docs.ansible.com/ansible/latest/user_guide/vault.html
 
-# Ansible Galaxy
+## Ansible Galaxy
 
 Wouldn't it be great if you could re-use roles that others have published?
 
@@ -776,7 +796,8 @@ published in Git repositories (Github, Gitlab, or Bitbucket).
 To do this, create a `requirements.yml` file in the root of your Ansible
 repository to store the roles that your configuration requires.
 
-For our example we'll use a role that sets the timezone 
+For our example we'll use a role that sets the timezone
+
 ```yml
 # Install timezone role
 - src: yatesr.timezone
@@ -832,6 +853,7 @@ Fri Mar 29 03:09:26 UTC 2019
 ```
 
 Now let's run our playbook again.
+
 ```bash
 $ ansible-playbook local.yml
 
@@ -887,7 +909,7 @@ See [Ansible Galaxy Docs] for more information.
 [timezone role]: https://galaxy.ansible.com/yatesr/timezone
 [List of TZ Database Time Zones - List]: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 
-# Conclusion
+## Conclusion
 
 I hope this guide has been useful in jumpstarting your interest in using
 Ansible. I surely tried to mention many of the things I needed to get started
@@ -898,7 +920,7 @@ officialdocumentation with more ease now that you understand what it does and
 how to use it.
 
 Feel free to refer to my `cloud9-dev` repository to get other ideas on how
-you can setup your local development environment in Cloud9 - 
+you can setup your local development environment in Cloud9 -
 [redconfetti/cloud9-dev].
 
 [redconfetti/cloud9-dev]: https://github.com/redconfetti/cloud9-dev
