Updates post excerpts to end after special tagging

--- a/_posts/2017-08-07-opendiff.md
+++ b/_posts/2017-08-07-opendiff.md
@@ -22,6 +22,7 @@ overkill for our purposes.
 The good news is that XCode provides a GUI tool called FileMerge, which is also
 known as `opendiff` from the command line. You do have to agree to the Xcode/iOS
 license, which requires local admin privileges, to use this tool.
+<!--more-->
 
 ``` shell
 $ which opendiff
