--- a/_posts/2020-05-05-julia.md
+++ b/_posts/2020-05-05-julia.md
@@ -14,6 +14,7 @@ My lead developer hyped [Julia] recently, so I decided to explore it.
 I purchased the book [Getting Started with Julia]. 
 
 Here are my notes that apply to Mac users to get started.
+<!--more-->
 
 ## Installing Julia
 
