--- a/_posts/2019-04-10-ansible.md
+++ b/_posts/2019-04-10-ansible.md
@@ -29,6 +29,7 @@ read the [Ansible Project Documentation].
 In this guide we use Ansible to maintain the state of your local development
 environment. After you are done you'll be able to apply what you've learned
 beyond your local Linux environment.
+<!--more-->
 
 To follow this guide, it is recommended that you setup an [Amazon Cloud9]
 environment with the default Amazon Linux EC2 instance. The Cloud9 service is
