Fixes list styling. Fixes markdown formatting. Adds excerpt separator to all necessary posts

--- a/_posts/2012-12-03-using-rails-2-3-8.md
+++ b/_posts/2012-12-03-using-rails-2-3-8.md
@@ -10,9 +10,18 @@ tags:
 - bundler
 comments: []
 ---
-I'm working on a project that is stuck on Rails 2.3.8 due to the size and complexity of the codebase. Upgrading it would be a nightmare. I recently ran into an issue with the database_cleaner gem, which isn't rolling back transactional queries properly. I'm not sure if the issue is with the gem, or perhaps some configuration with the system (ActiveRecord) which is causing the issue. Because of this, I'm wanting to create a dummy Rails 2.3.8 application so that I can reproduce the issue on a fresh, simple, vanilla Rails application.
 
-I created a new 'rails238' directory and switched to it, then created a new gemset via RVM.
+I'm working on a project that is stuck on Rails 2.3.8 due to the size and
+complexity of the codebase. Upgrading it would be a nightmare. I recently ran
+into an issue with the database_cleaner gem, which isn't rolling back
+transactional queries properly. I'm not sure if the issue is with the gem, or
+perhaps some configuration with the system (ActiveRecord) which is causing the
+issue. Because of this, I'm wanting to create a dummy Rails 2.3.8 application
+so that I can reproduce the issue on a fresh, simple, vanilla Rails application.
+
+I created a new 'rails238' directory and switched to it, then created a new
+gemset via RVM.
+<!--more-->
 
 ``` shell
 rvm --rvmrc --create 1.8.7@rails238
@@ -24,7 +33,8 @@ I then installed Rails 2.3.8.
 gem install --version '2.3.8' rails
 ```
 
-After this finished, I ran into an error when I would try to create a new Rails app.
+After this finished, I ran into an error when I would try to create a new Rails
+app.
 
 ``` shell
 
@@ -51,9 +61,13 @@ This was resolved by downgrading the default Rubygems to version 1.4.2.
 gem update --system 1.4.2
 ```
 
-I ran through the instructions to <a href="http://gembundler.com/rails23.html" target="_blank">setup Bundler with a Rails 2.3.8 system</a>, manually created the 'Gemfile' in the root directory of the project, then ran 'bundle install'.
+I ran through the instructions to [setup Bundler with a Rails 2.3.8 system],
+manually created the 'Gemfile' in the root directory of the project, then ran
+'bundle install'.
 
 This included RSpec for Rails 1.3.4.
+
+[setup Bundler with a Rails 2.3.8 system]: http://gembundler.com/rails23.html
 
 ``` ruby
 source :rubygems
@@ -71,7 +85,8 @@ group :development, :test do
 end
 ```
 
-I installed Rspec, then tried to list the rake tasks available, I would receive an error regarding RDoc.
+I installed Rspec, then tried to list the rake tasks available, I would receive
+an error regarding RDoc.
 
 ``` shell
 
@@ -95,19 +110,21 @@ no such file to load -- rake/rdoctask
 (See full trace by running task with --trace)
 ```
 
-It turns out that the config in the Rakefile conflicts with the latest Rdoc (version 3.12). I had to replace "require 'rake/rdoctask'" with:
+It turns out that the config in the Rakefile conflicts with the latest Rdoc
+(version 3.12). I had to replace "require 'rake/rdoctask'" with:
 
 ``` ruby
 require 'rdoc/task'
 ```
 
-This resolved the rake issue. 
+This resolved the rake issue.
 
 ``` ruby
 require 'rdoc/task'
 ```
 
-Now I try to run the default Rspec test script, but run into an issue with the MySQL gem.
+Now I try to run the default Rspec test script, but run into an issue with the
+MySQL gem.
 
 ``` shell
 $ bundle exec rake spec
@@ -121,4 +138,8 @@ no such file to load -- mysql
 /Users/jsmith/.rvm/gems/ruby-1.8.7-p371@rails238/gems/activesupport-2.3.8/lib/active_support/dependencies.rb:156:in `require'
 ```
 
-Still stuck on this issue with the MySQL gem. I have MySQL2 gem installed, which works on the other non-new project, but still this error persists. This <a href="http://stackoverflow.com/questions/991708/rails-mysql-and-snow-leopard" target="_blank">Stackflow article</a> seems related, but the suggested solutions don't help.
+Still stuck on this issue with the MySQL gem. I have MySQL2 gem installed,
+which works on the other non-new project, but still this error persists. This
+[Stackoverflow Article] seems related, but the suggested solutions don't help.
+
+[Stackoverflow Article]: http://stackoverflow.com/questions/991708/rails-mysql-and-snow-leopard
