Adds Disqus support to most recent posts

--- a/_posts/2019-04-10-ansible.md
+++ b/_posts/2019-04-10-ansible.md
@@ -5,6 +5,7 @@ title: Jumpstart Guide to Ansible
 description: Using Ansible to customize an Amazon Cloud9 Environment
 image_url: /images/posts/2019-03-23-ansible-logo.png
 date: 2019-04-10 09:00:00 -0800
+comments: true
 categories:
   - infrastructure
 tags:
