--- a/_posts/2020-05-05-julia.md
+++ b/_posts/2020-05-05-julia.md
@@ -4,6 +4,7 @@ published: false
 title: Julia
 description: Getting Started with Julia Programming
 date: 2020-05-05 18:33:22 -0800
+comments: true
 categories:
   - julia
 tags:
