--- a/_posts/2017-08-07-opendiff.md
+++ b/_posts/2017-08-07-opendiff.md
@@ -3,6 +3,7 @@ layout: post
 published: true
 title: FileMerge (also known as opendiff)
 date: 2017-08-07 12:00:00 -0700
+comments: true
 categories:
 - macosx
 tags:
