Fixes Jinja templated code examples reported in #4

--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -285,6 +285,9 @@ Ansible supports the ability to define configuration file templates that use the
 Jinja2 template syntax.
 
 Let's create a file called `gitconfig.j2` to define our Git client configuration.
+
+{% raw %}
+
 ```INI
 # {{ ansible_managed }}
 [core]
@@ -294,10 +297,14 @@ Let's create a file called `gitconfig.j2` to define our Git client configuration
   email = {{git_client_name}}
 ```
 
+{% endraw %}
+
 Now update the `local.yml` playbook file so that it includes the 'vars' that
 define our git client name and email address. Also add the tasks to output the
 value of the `ansible_user_id` variable, and configure the `.gitconfig` in that
 users home directory.
+
+{% raw %}
 
 ```yml
 ---
@@ -320,6 +327,8 @@ users home directory.
         group: "{{ ansible_user_id }}"
         mode: 0644
 ```
+
+{% endraw %}
 
 As you can see, the 'debug' task allows us to see what value is registered
 for the `ansible_user_id` variable. This is useful for troubleshooting
@@ -472,6 +481,8 @@ Next move your tasks from the `local.yml` to `roles/development/tasks/main.yml`.
 Additionally, update the path for the `gitconfig` template so that it is
 reflected as `templates/gitconfig`.
 
+{% raw %}
+
 ```yml
 ---
 - name: upgrade all packages
@@ -488,6 +499,8 @@ reflected as `templates/gitconfig`.
     group: "{{ ansible_user_id }}"
     mode: 0644
 ```
+
+{% endraw %}
 
 Now update `local.yml` so that it no longer defines the tasks for the play, but
 instead points to the `development` role.
