--- a/_posts/2019-04-10-ansible.md
+++ b/_posts/2019-04-10-ansible.md
@@ -271,6 +271,7 @@ Jinja2 template syntax.
 Let's create a file called `gitconfig.j2` to define our Git client
 configuration.
 
+{% raw %}
 ```django
 # {{ ansible_managed }}
 [core]
@@ -279,12 +280,14 @@ configuration.
   name = {{git_client_name}}
   email = {{git_client_name}}
 ```
+{% endraw %}
 
 Now update the `local.yml` playbook file so that it includes the 'vars' that
 define our git client name and email address. Also add the tasks to output the
 value of the `ansible_user_id` variable, and configure the `.gitconfig` in that
 users home directory.
 
+{% raw %}
 ```yml
 ---
 # This playbook deploys the entire setup to the Cloud9 development environment.
@@ -306,6 +309,7 @@ users home directory.
         group: "{{ ansible_user_id }}"
         mode: 0644
 ```
+{% endraw %}
 
 As you can see, the 'debug' task allows us to see what value is registered
 for the `ansible_user_id` variable. This is useful for troubleshooting
@@ -463,6 +467,7 @@ Additionally, update the path for the `gitconfig` template so that it is
 reflected as `templates/gitconfig` (you don't need to include the `.j2` file
 extension).
 
+{% raw %}
 ```yml
 ---
 - name: upgrade all packages
@@ -479,6 +484,7 @@ extension).
     group: "{{ ansible_user_id }}"
     mode: 0644
 ```
+{% endraw %}
 
 Now update `local.yml` so that it no longer defines the tasks for the play, but
 instead points to the `development` role.
@@ -628,10 +634,12 @@ touch roles/development/defaults/main.yml
 
 After you've done this, add the following to `defaults/main.yml`.
 
+{% raw %}
 ```yml
 git_client_name: "{{ ansible_user_gecos }}"
 git_client_email: "{{ ansible_user_id }}@{{ ansible_fqdn }}"
 ```
+{% endraw %}
 
 To properly test this, go into `host_vars/local.yml` and comment out the
 `git_client_name` and `git_client_email` variables.
@@ -722,16 +730,17 @@ in the future.
 
 A good practice is to add instructions to your `README.md` file, like so:
 
-> \# Setup
->
-> Run the following command to copy the template to your home directory
->
-> \`\`\`shell
-> cp ansible_secrets.example.yml ~/.ansible_secrets.yml
-> \`\`\`
->
-> Next, modify `~/.ansible_secrets.yml` to reflect the proper API keys
-> and passwords.
+````markdown
+# Setup
+
+Run the following command to copy the template to your home directory
+```shell
+cp ansible_secrets.example.yml ~/.ansible_secrets.yml
+```
+
+Next, modify `~/.ansible_secrets.yml` to reflect the proper API keys
+and passwords.
+````
 
 For more information, see [Ansible Docs - Defining Variables In Files].
 
