Adjustments to excerpt length

--- a/_posts/2019-04-10-ansible.md
+++ b/_posts/2019-04-10-ansible.md
@@ -357,6 +357,8 @@ this string to include the user-id of the Ansible user as well as the date and
 time, although this will result in Ansible reporting that the coniguration
 file has been changed everytime you run the task.
 
+See [ansible_managed]
+
 __ansible.cfg__
 
 ```django
